# cv-abbyy

./: main.cpp  notebook.ipynb
task1/: CMakeLists.txt  main.cpp  notebook.ipynb
task2/: BaseFilter.h  CMakeLists.txt  Huang.h  Naive.h  OpenCVFilter.h  Perreault.h  Untitled.ipynb  data.json  main.cpp
task4/: Untitled.ipynb
task5/: Untitled.ipynb
